@@ -626,36 +626,20 @@ ovs_router_del(struct unixctl_conn *conn, int argc OVS_UNUSED,
 }
 
 static void
-ovs_router_show_json(struct json **routes)
+ovs_router_show_json(struct json *json_routes, const struct classifier *cls,
+                     uint32_t table)
 {
-    struct json **json_entries = NULL;
+    struct ds ds = DS_EMPTY_INITIALIZER;
     struct ovs_router_entry *rt;
-    struct classifier *cls_main;
-    struct ds ds;
-    int n_rules;
-    int i = 0;
 
-    cls_main = cls_find(CLS_MAIN);
-    if (!cls_main) {
-        goto out;
+    if (!cls) {
+        return;
     }
 
-    n_rules = classifier_count(cls_main);
-    if (!n_rules) {
-        goto out;
-    }
-
-    json_entries = xmalloc(n_rules * sizeof *json_entries);
-    ds_init(&ds);
-
-    CLS_FOR_EACH (rt, cr, cls_main) {
+    CLS_FOR_EACH (rt, cr, cls) {
         bool user = rt->priority != rt->plen && !rt->local;
         uint8_t plen = rt->plen;
         struct json *json, *nh;
-
-        if (i >= n_rules) {
-            break;
-        }
 
         json = json_object_create();
         nh = json_object_create();
@@ -664,6 +648,7 @@ ovs_router_show_json(struct json **routes)
             plen -= 96;
         }
 
+        json_object_put(json, "table", json_integer_create(table));
         json_object_put(json, "user", json_boolean_create(user));
         json_object_put(json, "local", json_boolean_create(rt->local));
         json_object_put(json, "priority", json_integer_create(rt->priority));
@@ -689,59 +674,69 @@ ovs_router_show_json(struct json **routes)
         }
 
         json_object_put(json, "nexthops", json_array_create_1(nh));
-        json_entries[i++] = json;
+        json_array_add(json_routes, json);
     }
 
     ds_destroy(&ds);
+}
 
-out:
-    *routes = json_array_create(json_entries, i);
+static bool
+is_standard_table(uint32_t table_id)
+{
+    return table_id == CLS_DEFAULT
+           || table_id == CLS_MAIN
+           || table_id == CLS_LOCAL;
 }
 
 static void
-ovs_router_show_text(struct ds *ds)
+ovs_router_show_text(struct ds *ds, const struct classifier *cls,
+                     uint32_t table, bool show_header)
 {
-    struct classifier *std_cls[3];
     struct ovs_router_entry *rt;
 
-    std_cls[0] = cls_find(CLS_LOCAL);
-    std_cls[1] = cls_find(CLS_MAIN);
-    std_cls[2] = cls_find(CLS_DEFAULT);
-
-    ds_put_format(ds, "Route Table:\n");
-    for (int i = 0; i < ARRAY_SIZE(std_cls); i++) {
-        if (!std_cls[i]) {
-            continue;
+    if (show_header) {
+        if (is_standard_table(table)) {
+            ds_put_format(ds, "Route Table:\n");
+        } else {
+            ds_put_format(ds, "Route Table #%"PRIu32":\n", table);
         }
-        CLS_FOR_EACH (rt, cr, std_cls[i]) {
-            uint8_t plen;
-            if (rt->priority == rt->plen || rt->local) {
-                ds_put_format(ds, "Cached: ");
-            } else {
-                ds_put_format(ds, "User: ");
-            }
-            ipv6_format_mapped(&rt->nw_addr, ds);
-            plen = rt->plen;
-            if (IN6_IS_ADDR_V4MAPPED(&rt->nw_addr)) {
-                plen -= 96;
-            }
-            ds_put_format(ds, "/%"PRIu8, plen);
-            if (rt->mark) {
-                ds_put_format(ds, " MARK %"PRIu32, rt->mark);
-            }
+    }
 
-            ds_put_format(ds, " dev %s", rt->output_netdev);
-            if (ipv6_addr_is_set(&rt->gw)) {
-                ds_put_format(ds, " GW ");
-                ipv6_format_mapped(&rt->gw, ds);
-            }
-            ds_put_format(ds, " SRC ");
-            ipv6_format_mapped(&rt->src_addr, ds);
-            if (rt->local) {
-                ds_put_format(ds, " local");
-            }
-            ds_put_format(ds, "\n");
+    if (!cls) {
+        return;
+    }
+
+    CLS_FOR_EACH (rt, cr, cls) {
+        uint8_t plen;
+        if (rt->priority == rt->plen || rt->local) {
+            ds_put_format(ds, "Cached: ");
+        } else {
+            ds_put_format(ds, "User: ");
         }
+        ipv6_format_mapped(&rt->nw_addr, ds);
+        plen = rt->plen;
+        if (IN6_IS_ADDR_V4MAPPED(&rt->nw_addr)) {
+            plen -= 96;
+        }
+        ds_put_format(ds, "/%"PRIu8, plen);
+        if (rt->mark) {
+            ds_put_format(ds, " MARK %"PRIu32, rt->mark);
+        }
+
+        ds_put_format(ds, " dev %s", rt->output_netdev);
+        if (ipv6_addr_is_set(&rt->gw)) {
+            ds_put_format(ds, " GW ");
+            ipv6_format_mapped(&rt->gw, ds);
+        }
+        ds_put_format(ds, " SRC ");
+        ipv6_format_mapped(&rt->src_addr, ds);
+        if (rt->local) {
+            ds_put_format(ds, " local");
+        }
+        if (!is_standard_table(table) && !show_header) {
+            ds_put_format(ds, " table %"PRIu32, table);
+        }
+        ds_put_format(ds, "\n");
     }
 }
 
@@ -749,15 +744,65 @@ static void
 ovs_router_show(struct unixctl_conn *conn, int argc OVS_UNUSED,
                const char *argv[] OVS_UNUSED, void *aux OVS_UNUSED)
 {
-    if (unixctl_command_get_output_format(conn) == UNIXCTL_OUTPUT_FMT_JSON) {
-        struct json *routes;
+    struct ds ds = DS_EMPTY_INITIALIZER;
+    struct classifier *cls = NULL;
+    uint32_t table = CLS_MAIN;
 
-        ovs_router_show_json(&routes);
+    if (argc > 1) {
+        if (!strcmp(argv[1], "table=all")) {
+            table = CLS_ALL;
+        } else if (!ovs_scan(argv[1], "table=%"SCNu32, &table)) {
+            unixctl_command_reply_error(conn, "Invalid table format");
+            return;
+        }
+    }
+
+    if (table != CLS_ALL) {
+        cls = cls_find(table);
+        if (!cls) {
+            ds_put_format(&ds, "Table '%s' not found", argv[1]);
+            unixctl_command_reply_error(conn, ds_cstr_ro(&ds));
+            ds_destroy(&ds);
+            return;
+        }
+    }
+
+    if (unixctl_command_get_output_format(conn) == UNIXCTL_OUTPUT_FMT_JSON) {
+        struct json *routes = NULL;
+
+        routes = json_array_create_empty();
+
+        if (table == CLS_ALL) {
+            struct clsmap_node *node;
+
+            CMAP_FOR_EACH (node, cmap_node, &clsmap) {
+                ovs_router_show_json(routes, &node->cls, node->table);
+            }
+            ovs_router_show_json(routes, cls_find(CLS_MAIN), CLS_MAIN);
+        } else if (is_standard_table(table)) {
+            ovs_router_show_json(routes, cls_find(CLS_LOCAL), CLS_LOCAL);
+            ovs_router_show_json(routes, cls_find(CLS_MAIN), CLS_MAIN);
+            ovs_router_show_json(routes, cls_find(CLS_DEFAULT), CLS_DEFAULT);
+        } else {
+            ovs_router_show_json(routes, cls, table);
+        }
+
         unixctl_command_reply_json(conn, routes);
     } else {
-        struct ds ds = DS_EMPTY_INITIALIZER;
+        if (table == CLS_ALL) {
+            struct clsmap_node *node;
 
-        ovs_router_show_text(&ds);
+            CMAP_FOR_EACH (node, cmap_node, &clsmap) {
+                ovs_router_show_text(&ds, &node->cls, node->table, false);
+            }
+        } else if (is_standard_table(table)) {
+            ovs_router_show_text(&ds, cls_find(CLS_LOCAL), CLS_LOCAL, true);
+            ovs_router_show_text(&ds, cls_find(CLS_MAIN), CLS_MAIN, false);
+            ovs_router_show_text(&ds, cls_find(CLS_DEFAULT), CLS_DEFAULT,
+                                 false);
+        } else {
+            ovs_router_show_text(&ds, cls, table, true);
+        }
         unixctl_command_reply(conn, ds_cstr(&ds));
         ds_destroy(&ds);
     }
@@ -930,7 +975,7 @@ ovs_router_init(void)
                                  "ip/plen dev [gw] "
                                  "[pkt_mark=mark] [src=src_ip]",
                                  2, 5, ovs_router_add, NULL);
-        unixctl_command_register("ovs/route/show", "", 0, 0,
+        unixctl_command_register("ovs/route/show", "[table=all|id]", 0, 1,
                                  ovs_router_show, NULL);
         unixctl_command_register("ovs/route/del", "ip/plen "
                                  "[pkt_mark=mark]", 1, 2, ovs_router_del,
