@@ -1,6 +1,8 @@
 Post-v3.6.0
 --------------------
-
+   - ovs-appctl:
+     * 'ovs/route/show': added new option, table=[ID|all], to list routes from
+       a specific OVS table or all routes from all tables.
 
 v3.6.0 - 18 Aug 2025
 --------------------
